[package]

name = "sprs"
description = "A sparse matrix library"
version = "0.9.2"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
edition = "2018"

readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vbarrielle/sprs"
documentation = "https://docs.rs/sprs"
keywords = ["sparse", "matrix", "linear", "algebra"]

exclude = [
    "data/*"
]

[features]
default = ["alga", "multi_thread"]
multi_thread = ["rayon", "num_cpus"]

[dependencies]
num-traits = "0.2.14"
ndarray = "0.13.1"
alga = { version = "0.9.3", optional = true }
num-complex = "0.3.1"
serde = { version = "1.0.117", optional = true, features = ["derive"] }
smallvec = "1.5.0"
rayon = { version = "1.5.0", optional = true }
num_cpus = { version = "1.13.0", optional = true }
approx = { version = "0.4.0", optional = true }

[dev-dependencies]
bencher = "0.1.5"
tempdir = "0.3.7"
bincode = "1.3.1"
tobj = "2.0.2"
image = { version = "0.23.12", default-features = false, features = ["png"] }
rand = { version = "0.7.3", default-features = false, features = ["small_rng"] }

[[bench]]
name = "suite"
harness = false

[[bench]]
name = "sparse_dense_products"
harness = false

[[bench]]
name = "sorting"
harness = false

[workspace]
members = [
    "sprs-ldl",
    "suitesparse_bindings/suitesparse_ldl_sys",
    "suitesparse_bindings/sprs_suitesparse_ldl",
    "suitesparse_bindings/suitesparse_camd_sys",
    "suitesparse_bindings/sprs_suitesparse_camd",
    "suitesparse_bindings/suitesparse-src",
    "sprs-rand",
    "sprs-benches",
]

[package.metadata.docs.rs]
all-features = true
